-fix select text align

--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -39,6 +39,7 @@ $button-color: #c3ad1b;
   align-items: center;
   justify-content: space-evenly;
   align-content: center;
+  text-align: center;
 
   .select {
     background: transparent;
